--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ html {
 body {
  margin: 0;
  padding: 0;
- background-image: url('横.png'); /* 替换为你的图片路径 */
+ background-image: url("https://github.com/GXawa/gx.github.io/blob/main/20241214_205208_66385385_p0.png"); /* 替换为你的图片路径 */
  background-position: center; /* 图片居中 */
  background-size: cover; /* 图片覆盖整个元素 */
  background-repeat: no-repeat; /* 不重复图片 */
