--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ html {
 body {
  margin: 0;
  padding: 0;
- background-image: url("https://gxawa.github.io/gx.github.io/20241214_205208_66385385_p0.png"); /* 替换为你的图片路径 */
+ background-image: url("https://static.wikia.nocookie.net/hyperrooms/images/4/4c/Cache_2b92e283c97d8e5e.jpg/revision/latest?cb=20230821051529&path-prefix=zh&format=original"); /* 替换为你的图片路径 */
  background-position: center; /* 图片居中 */
  background-size: cover; /* 图片覆盖整个元素 */
  background-repeat: no-repeat; /* 不重复图片 */
