--- a/index.css
+++ b/index.css
@@ -67,14 +67,18 @@ html {
  height: 100%;
 }
  
-body {
- margin: 0;
- padding: 0;
- background-image: url("https://raw.githubusercontent.com/GXawa/gx.github.io/refs/heads/main/Cache_2b92e283c97d8e5e%20(1).jpg"); /* 替换为你的图片路径 */
- background-position: center; /* 图片居中 */
- background-size: cover; /* 图片覆盖整个元素 */
- background-repeat: no-repeat; /* 不重复图片 */
- height: 100%; /* 高度设置为100% */
+.bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url("https://raw.githubusercontent.com/GXawa/gx.github.io/refs/heads/main/Cache_2b92e283c97d8e5e%20(1).jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+}
 /*首页*/
 .mainpage-banner,
 .mainpage-block {
